[FIX] 서버코어 프로젝트 format.cpp 인식 누락 수정

--- a/2D_MMO_Server/ServerCore/ServerCore.vcxproj
+++ b/2D_MMO_Server/ServerCore/ServerCore.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="CoreGlobal.cpp" />
     <ClCompile Include="CorePch.cpp" />
     <ClCompile Include="CoreTLS.cpp" />
+    <ClCompile Include="format.cpp" />
     <ClCompile Include="IocpCore.cpp" />
     <ClCompile Include="IocpEvent.cpp" />
     <ClCompile Include="Listener.cpp" />
