--- a/2D_MMO_Server/ServerCore/ServerCore.vcxproj.filters
+++ b/2D_MMO_Server/ServerCore/ServerCore.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="ThreadPool.cpp">
       <Filter>Thread</Filter>
     </ClCompile>
+    <ClCompile Include="format.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
