--- a/2D_MMO_Server/GameServer/GameServer.vcxproj.filters
+++ b/2D_MMO_Server/GameServer/GameServer.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Projectile.cpp">
       <Filter>Game\Object</Filter>
     </ClCompile>
+    <ClCompile Include="Login.cpp">
+      <Filter>Packet</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
