--- a/2D_MMO_Client/Assembly-CSharp.csproj
+++ b/2D_MMO_Client/Assembly-CSharp.csproj
@@ -63,38 +63,72 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Managers\DataManager.cs" />
     <Compile Include="Assets\Scripts\Utils\Extension.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\StatInfo.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\PositionInfo.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_SPAWN.cs" />
     <Compile Include="Assets\Scripts\Scene\BaseScene.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_MOVE.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_CHANGE_HP.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_SKILL.cs" />
     <Compile Include="Assets\Scripts\UI\HpBar.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\C_MOVE.cs" />
     <Compile Include="Assets\Scripts\UI\ChatUIController.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\C_SKILL.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SignInError.cs" />
+    <Compile Include="Assets\Scripts\Packet\Login.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SD_SIGNUP.cs" />
     <Compile Include="Assets\Scripts\UI\BaseUIController.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_SIGNIN.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_CHAT.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\D_SIGNIN.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryUIController.cs" />
     <Compile Include="Assets\Scripts\Utils\Utils.cs" />
     <Compile Include="Assets\Scripts\Managers\ObjectManager.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SignUpError.cs" />
     <Compile Include="Assets\Scripts\Controllers\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\C_SIGNUP.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_DIE.cs" />
     <Compile Include="Assets\Scripts\Managers\NetworkManager.cs" />
     <Compile Include="Assets\Scripts\Utils\BaseMonobehaviour.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\MoveDir.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\ObjectState.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\C_ENTER_GAME.cs" />
     <Compile Include="Assets\Scripts\Controllers\MonsterController.cs" />
     <Compile Include="Assets\Scripts\Scene\LoginScene.cs" />
     <Compile Include="Assets\Scripts\Controllers\ObjectController.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\C_CHAT.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SkillInfo.cs" />
     <Compile Include="Assets\Scripts\Packet\PacketManager.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_DESPAWN.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SD_SIGNIN.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\GameObjectType.cs" />
     <Compile Include="Assets\Scripts\UI\LoginUIController.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\PacketType.cs" />
     <Compile Include="Assets\Scripts\Managers\SceneManager.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\ObjectInfo.cs" />
     <Compile Include="Assets\Scripts\Controllers\MyPlayerController.cs" />
     <Compile Include="Assets\Scripts\Packet\PacketHandler.cs" />
     <Compile Include="Assets\Scripts\Controllers\ProjectileController.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_LEAVE_GAME.cs" />
     <Compile Include="Assets\Scripts\Scene\GameScene.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\D_SIGNUP.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SkillType.cs" />
     <Compile Include="Assets\Scripts\Managers\MapManager.cs" />
     <Compile Include="Assets\Scripts\Controllers\CameraController.cs" />
     <Compile Include="Assets\Scripts\Utils\Define.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_ENTER_GAME.cs" />
     <Compile Include="Assets\Scripts\Data\ContentsData.cs" />
     <Compile Include="Assets\Resources\Art\UI\FantasyIconsPackFree\Demo\IconViewer.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\SC_SIGNUP.cs" />
     <Compile Include="Assets\Scripts\Managers\Manager.cs" />
     <Compile Include="Assets\Scripts\Session\ServerSession.cs" />
+    <Compile Include="Assets\Scripts\FlatBuffer\C_SIGNIN.cs" />
     <Compile Include="Assets\Scripts\UI\SettingUIController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\DLL\Google.FlatBuffers.dll" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile-2-Pass.shader" />
     <None Include="Assets\UI Toolkit\Chat\ChatDocument.uxml" />
     <None Include="Assets\UI Toolkit\Inventory\InventoryStyle.uss" />
@@ -104,6 +138,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\DLL\ServerCore.dll" />
     <None Include="Assets\UI Toolkit\Default\DefaultStyle.uss" />
     <None Include="Assets\TextMesh Pro\Shaders\SDFFunctions.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
@@ -114,12 +149,10 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
     <None Include="Assets\Resources\MapData\Map_002.txt" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-    <None Include="Assets\DLL\ServerCore.dll" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\UI Toolkit\Chat\ChatStyle.uss" />
     <None Include="Assets\Resources\MapData\Map_005.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\DLL\Google.FlatBuffers.dll" />
     <None Include="Assets\UI Toolkit\Inventory\InventoryDocument.uxml" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\UI Toolkit\Login\LoginDocument.uxml" />
@@ -597,6 +630,10 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\Managed\UnityEngine\UnityEditor.XRModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Google.FlatBuffers">
+      <HintPath>Assets\DLL\Google.FlatBuffers.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.Collections.LowLevel.ILSupport">
       <HintPath>Library\PackageCache\com.unity.collections\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
       <Private>False</Private>
@@ -613,16 +650,20 @@
       <HintPath>Library\PackageCache\com.unity.visualscripting\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Google.FlatBuffers">
-      <HintPath>Assets\DLL\Google.FlatBuffers.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json\Runtime\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>Library\PackageCache\com.unity.nuget.mono-cecil\Mono.Cecil.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Types">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Gradle">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Gradle.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="netstandard">
