--- a/2D_MMO_Client/Assembly-CSharp.csproj
+++ b/2D_MMO_Client/Assembly-CSharp.csproj
@@ -63,67 +63,38 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Managers\DataManager.cs" />
     <Compile Include="Assets\Scripts\Utils\Extension.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\StatInfo.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\PositionInfo.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_SPAWN.cs" />
     <Compile Include="Assets\Scripts\Scene\BaseScene.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_MOVE.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_CHANGE_HP.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_SKILL.cs" />
-    <Compile Include="Assets\Scripts\UI\HpBar.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\C_MOVE.cs" />
+    <Compile Include="Assets\Scripts\Contents\HpBar.cs" />
     <Compile Include="Assets\Scripts\UI\ChatUIController.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\C_SKILL.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SignInError.cs" />
     <Compile Include="Assets\Scripts\Packet\Login.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SD_SIGNUP.cs" />
     <Compile Include="Assets\Scripts\UI\BaseUIController.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_SIGNIN.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_CHAT.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\D_SIGNIN.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryUIController.cs" />
     <Compile Include="Assets\Scripts\Utils\Utils.cs" />
     <Compile Include="Assets\Scripts\Managers\ObjectManager.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SignUpError.cs" />
     <Compile Include="Assets\Scripts\Controllers\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\C_SIGNUP.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_DIE.cs" />
     <Compile Include="Assets\Scripts\Managers\NetworkManager.cs" />
     <Compile Include="Assets\Scripts\Utils\BaseMonobehaviour.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\MoveDir.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\ObjectState.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\C_ENTER_GAME.cs" />
     <Compile Include="Assets\Scripts\Controllers\MonsterController.cs" />
     <Compile Include="Assets\Scripts\Managers\UIManager.cs" />
     <Compile Include="Assets\Scripts\Scene\LoginScene.cs" />
     <Compile Include="Assets\Scripts\Controllers\ObjectController.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\C_CHAT.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SkillInfo.cs" />
     <Compile Include="Assets\Scripts\Packet\PacketManager.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_DESPAWN.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SD_SIGNIN.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\GameObjectType.cs" />
+    <Compile Include="Assets\Scripts\Managers\InventoryManager.cs" />
     <Compile Include="Assets\Scripts\UI\LoginUIController.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\PacketType.cs" />
+    <Compile Include="Assets\Scripts\Contents\Item.cs" />
     <Compile Include="Assets\Scripts\Managers\SceneManager.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\ObjectInfo.cs" />
     <Compile Include="Assets\Scripts\Controllers\MyPlayerController.cs" />
     <Compile Include="Assets\Scripts\Packet\PacketHandler.cs" />
     <Compile Include="Assets\Scripts\Controllers\ProjectileController.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_LEAVE_GAME.cs" />
+    <Compile Include="Assets\Scripts\UI\InventoryItemUI.cs" />
     <Compile Include="Assets\Scripts\Scene\GameScene.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\D_SIGNUP.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SkillType.cs" />
     <Compile Include="Assets\Scripts\Managers\MapManager.cs" />
     <Compile Include="Assets\Scripts\Controllers\CameraController.cs" />
     <Compile Include="Assets\Scripts\Utils\Define.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_ENTER_GAME.cs" />
     <Compile Include="Assets\Scripts\Data\ContentsData.cs" />
     <Compile Include="Assets\Resources\Art\UI\FantasyIconsPackFree\Demo\IconViewer.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\SC_SIGNUP.cs" />
     <Compile Include="Assets\Scripts\Managers\Manager.cs" />
     <Compile Include="Assets\Scripts\Session\ServerSession.cs" />
-    <Compile Include="Assets\Scripts\FlatBuffer\C_SIGNIN.cs" />
     <Compile Include="Assets\Scripts\UI\SettingUIController.cs" />
   </ItemGroup>
   <ItemGroup>
